--- a/JavaFX/Carduino/nbproject/project.properties
+++ b/JavaFX/Carduino/nbproject/project.properties
@@ -35,8 +35,8 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
