kleine Überarbeitung für die nächsten Aufträge

--- a/JavaFX/Carduino/nbproject/project.properties
+++ b/JavaFX/Carduino/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Carduino
 application.vendor=Alex
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -116,7 +117,7 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path=C:\\Users\\Alex\\Dropbox\\SYP\\JavaFX\\Carduino\\rxtx-2.1-7-bins-r2\\Windows\\i368-mingw32;%PATH%
+run.jvmargs=-Djava.library.path=.\\rxtx-2.1-7-bins-r2\\Windows\\i368-mingw32;%PATH%
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
