--- a/JavaFX/Carduino/nbproject/project.properties
+++ b/JavaFX/Carduino/nbproject/project.properties
@@ -117,7 +117,7 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path=.\\rxtx-2.1-7-bins-r2\\Windows\\i368-mingw32;%PATH%
+run.jvmargs=-Djava.library.path=.\\rxtx-2.1-7-bins-r2\\Windows\\i368-mingw32;
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
