--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 JavaFX/Carduino/nbproject/jfx-impl_backup_4.xml
 JavaFX/Carduino/nbproject/jfx-impl_backup_5.xml
+JavaFX/Carduino/nbproject/jfx-impl_backup_6.xml
+JavaFX/Carduino/nbproject/jfx-impl_backup_6.xml
